--- a/frontend/templates/home.html
+++ b/frontend/templates/home.html
@@ -25,6 +25,7 @@
         <div class="post">
             <h2>{{ post.title }}</h2>
             <p>{{ post.content }}</p>
+            <p>Timestamp: {{ post.timestamp }}</p>
             <p>Author: {{ post.user.username }}</p>
         </div>
         {% endfor %}
