--- a/frontend/templates/profile.html
+++ b/frontend/templates/profile.html
@@ -11,7 +11,8 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-top: 50px;
+            margin-top: 80px;
+            margin-bottom: 30px;
         }
 
         .user-foto {
